--- a/src/angularclient/src/assets/silent-callback.html
+++ b/src/angularclient/src/assets/silent-callback.html
@@ -12,9 +12,9 @@
     <body>
         <script>
             const idpSettings = {
-                authority: "https://localhost:9009",
-                clientId: "angular-client",
-                scope: "openid profile eshoppinggateway",
+                authority: "http://localhost:9090",
+                clientId: "eShoppingClient",
+                //scope: "openid profile eshoppinggateway",
                 response_type: "code"
             };
 
